fixes on horizontal scrolling - removed scrolling from form labels

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -365,6 +365,7 @@ input[type='time']:active::-webkit-calendar-picker-indicator {
     justify-content: center;
     align-items: center;
     gap: 0.5rem;
+    font-size: var(--font-size-md);
 }
 
 @media screen and (max-width: 378.98px) {
